fix(backend): update spending item route also update spending total
